--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     margin: 0 auto;
-    max-width: 40rem;
+    max-width: 45rem;
     font-family: 'Crimson Text', Georgia, 'Times New Roman', Times, serif;
     line-height: 1.5;
     font-size: 1.1em;
@@ -25,6 +25,7 @@ code {
 pre {
     padding: 1em;
     border-left: 2px solid #69c;
+    overflow: auto;
 }
 
 code, pre {
