--- a/style.css
+++ b/style.css
@@ -19,7 +19,6 @@ h1, h2, strong {
 
 code {
     padding: 2px 4px;
-    vertical-align: text-bottom;
 }
 
 pre {
@@ -29,6 +28,8 @@ pre {
 }
 
 code, pre {
+    font-family: 'Fira Mono', monospace;
+    font-size: 0.7em;
     background: #f5f7f9;
     border-bottom: 1px solid #d8dee9;
     color: #425886;
