--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
     line-height: 1.5;
     font-size: 1.1em;
     padding: 1rem;
-    color: #333;
+    color: #222;
 }
 
 h2 {
@@ -14,7 +14,7 @@ h2 {
 }
 
 h1, h2, strong {
-    color: #222;
+    color: #111;
 }
 
 code {
@@ -32,5 +32,5 @@ code, pre {
     font-size: 0.7em;
     background: #f5f7f9;
     border-bottom: 1px solid #d8dee9;
-    color: #425886;
+    color: #2d509c;
 }
